# evalops

./: .env.example  README.md  agent.md  api.py  evalops.md  pyproject.toml  setup.py
scripts/: bench_gguf.py  bench_mmlu.py  bench_models.py
src/: __init__.py  main.py  worker.py
src/agents/: __init__.py
src/api/: __init__.py
src/core/: __init__.py  config.py
src/database/: __init__.py  models.py
src/datasets/: __init__.py  manager.py
src/generation/: synthetic.py
src/metrics/: __init__.py  deepeval_runner.py  ragas_runner.py  schemas.py
src/runner/: consumer.py
src/utils/: __init__.py  deepeval_wrapper.py  logging.py
src/vectors/: __init__.py
tests/: __init__.py  test_benchmarks.py  test_dashboard_api.py  test_dataset_manager.py  test_deepeval_runner.py  test_eval_orchestration.py  test_ragas_runner.py  test_safety.py
tests/evaluation/: __init__.py  test_eval.py
tests/unit/: test_common_clients.py  test_inference_extras.py  test_placeholder.py  test_security_lifecycle.py
