[project]
name = "evalops"
version = "0.1.0"
description = "DeepEval & Benchmarking Harness"
authors = [
    { name = "Akshat Tilak" }
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.22.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0"
]

[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
deepeval = ">=0.20.0"
ragas = ">=0.1.0"
pytest-mock = ">=3.10.0"
httpx = ">=0.24.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
